@@ -2,16 +2,19 @@
 
 set -e
 
+#find . -type f -exec dos2unix {} \;
+
 # print all comands to console if DEBUG is set
 if [[ ! -z "${DEBUG}" ]]; then
     set -x
 fi
 
 # set some helpful variables
+export CREATE_DB_SQL='etc/create_database_MySQL.sql'
 export SERVICE_PROPERTY_FILE='etc/i5.las2peer.services.mentoringCockpitService.MentoringCockpitService.properties'
-export SERVICE_VERSION=$(awk -F "=" '/service.version/ {print $2}' etc/ant_configuration/service.properties)
-export SERVICE_NAME=$(awk -F "=" '/service.name/ {print $2}' etc/ant_configuration/service.properties)
-export SERVICE_CLASS=$(awk -F "=" '/service.class/ {print $2}' etc/ant_configuration/service.properties)
+export SERVICE_VERSION=$(awk -F "=" '/service.version/ {print $2}' gradle.properties)
+export SERVICE_NAME=$(awk -F "=" '/service.name/ {print $2}' gradle.properties)
+export SERVICE_CLASS=$(awk -F "=" '/service.class/ {print $2}' gradle.properties)
 export SERVICE=${SERVICE_NAME}.${SERVICE_CLASS}@${SERVICE_VERSION}
 
 # check mandatory variables
@@ -29,6 +32,14 @@ export SERVICE=${SERVICE_NAME}.${SERVICE_CLASS}@${SERVICE_VERSION}
     echo "Mandatory variable MYSQL_PORT is not set. Add -e MYSQL_PORT=mysqlPort to your arguments." && exit 1
 [[ -z "${MYSQL_DATABASE}" ]] && \
     echo "Mandatory variable MYSQL_DATABASE is not set. Add -e MYSQL_DATABASE=mysqlDatabase to your arguments." && exit 1
+[[ -z "${SPARQL_URL}" ]] && \
+    echo "Mandatory variable SPARQL_URL is not set. Add -e MYSQL_DATABASE=mysqlDatabase to your arguments." && exit 1
+[[ -z "${USER_EMAIL}" ]] && \
+    echo "Mandatory variable USER_EMAIL is not set. Add -e USER_EMAIL=askabot@fakemail.de to your arguments." && exit 1
+
+# ISSUE #6
+[[ -z "${USER_EMAIL}" ]] && \
+    echo "Mandatory variable MOODLE_TOKEN is not set. Add -e MOODLE_TOKEN=beautifulMoodleToken to your arguments." && exit 1
 
 # optional variables
 [[ -z "${SERVICE_PASSPHRASE}" ]] && export SERVICE_PASSPHRASE='mentoring'
@@ -39,11 +50,20 @@ function set_in_service_config {
 }
 set_in_service_config lrsDomain ${LRS_DOMAIN}
 set_in_service_config lrsAuth "${LRS_AUTH}"
+set_in_service_config feedbackLRSAuth "${FEEDBACK_LRS_AUTH}"
 set_in_service_config mysqlUser ${MYSQL_USER}
 set_in_service_config mysqlPassword ${MYSQL_PASSWORD}
 set_in_service_config mysqlHost ${MYSQL_HOST}
 set_in_service_config mysqlPort ${MYSQL_PORT}
 set_in_service_config mysqlDatabase ${MYSQL_DATABASE}
+set_in_service_config sparqlUrl ${SPARQL_URL}
+set_in_service_config eRecUrl ${EREC_URL}
+set_in_service_config limeUrl ${LIME_URL}
+set_in_service_config evalMethod ${EVAL_METHOD}
+set_in_service_config userEmail ${USER_EMAIL}
+
+# ISSUE #6
+set_in_service_config moodleToken ${MOODLE_TOKEN}
 
 
 # wait for any bootstrap host to be available
@@ -60,9 +80,22 @@ if [[ ! -z "${BOOTSTRAP}" ]]; then
     done
 fi
 
+# ensure the database is ready
+while ! mysqladmin ping -h${MYSQL_HOST} -P${MYSQL_PORT} -u${MYSQL_USER} -p${MYSQL_PASSWORD} --silent; do
+    echo "Waiting for mysql at ${MYSQL_HOST}:${MYSQL_PORT}..."
+    sleep 1
+done
+echo "${MYSQL_HOST}:${MYSQL_PORT} is available. Continuing..."
+
+# Create and migrate the database on first run
+if ! mysql -h${MYSQL_HOST} -P${MYSQL_PORT} -u${MYSQL_USER} -p${MYSQL_PASSWORD} -e "desc ${MYSQL_DATABASE}.ACCESS" > /dev/null 2>&1; then
+    echo "Creating database schema..."
+    mysql -h${MYSQL_HOST} -P${MYSQL_PORT} -u${MYSQL_USER} -p${MYSQL_PASSWORD} ${MYSQL_DATABASE} < ${CREATE_DB_SQL}
+fi
+
 # prevent glob expansion in lib/*
 set -f
-LAUNCH_COMMAND='java -cp lib/* i5.las2peer.tools.L2pNodeLauncher -s service -p '"${LAS2PEER_PORT} ${SERVICE_EXTRA_ARGS}"
+LAUNCH_COMMAND='java -cp lib/* --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED i5.las2peer.tools.L2pNodeLauncher -s service -p '"${LAS2PEER_PORT} ${SERVICE_EXTRA_ARGS}"
 if [[ ! -z "${BOOTSTRAP}" ]]; then
     LAUNCH_COMMAND="${LAUNCH_COMMAND} -b ${BOOTSTRAP}"
 fi
@@ -85,12 +118,13 @@ function selectMnemonic {
 echo external_address = $(curl -s https://ipinfo.io/ip):${LAS2PEER_PORT} > etc/pastry.properties
 
 # start the service within a las2peer node
+echo "now comes the moment of thruth"
 if [[ -z "${@}" ]]
 then
     if [ -n "$LAS2PEER_ETH_HOST" ]; then
-        exec ${LAUNCH_COMMAND} --node-id-seed $NODE_ID_SEED --observer --ethereum-mnemonic "$(selectMnemonic)" uploadStartupDirectory startService\("'""${SERVICE}""'", "'""${SERVICE_PASSPHRASE}""'"\) startWebConnector "node=getNodeAsEthereumNode()" "registry=node.getRegistryClient()" "n=getNodeAsEthereumNode()" "r=n.getRegistryClient()" 
+        exec ${LAUNCH_COMMAND} --observer --ethereum-mnemonic "$(selectMnemonic)" uploadStartupDirectory startService\("'""${SERVICE}""'", "'""${SERVICE_PASSPHRASE}""'"\) startWebConnector "node=getNodeAsEthereumNode()" "registry=node.getRegistryClient()" "n=getNodeAsEthereumNode()" "r=n.getRegistryClient()" 
     else
-        exec ${LAUNCH_COMMAND} --node-id-seed $NODE_ID_SEED --observer uploadStartupDirectory startService\("'""${SERVICE}""'", "'""${SERVICE_PASSPHRASE}""'"\) startWebConnector
+        exec ${LAUNCH_COMMAND} --observer uploadStartupDirectory startService\("'""${SERVICE}""'", "'""${SERVICE_PASSPHRASE}""'"\) startWebConnector
     fi
 else
   exec ${LAUNCH_COMMAND} ${@}
